kubernetes/base/discord.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord
  labels:
    app: discord
spec:
  selector:
    matchLabels:
      app: discord
  template:
    metadata:
      labels:
        app: discord
    spec:
      containers:
        - name: discord
          image: leigholiver/replaybot_discord
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
