kubernetes/base/search.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
  labels:
    app: search
spec:
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
        - name: search
          image: leigholiver/replaybot_search
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: search
spec:
  selector:
    app: search
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: search.replaybot.com
spec:
  tls:
  - hosts:
    - search.replaybot.com
    secretName: search-tls
  rules:
  - host: search.replaybot.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: search
            port:
              number: 80
